--- a/history.html
+++ b/history.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Coco Chanel</title>
+    <title>History</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <style>
         
@@ -16,6 +16,7 @@
             <ul>
                 <li class="link"><a href="index.html">home</a></li>
                 <li class="link"><a href="products.html">products</a></li>
+                <li class="link"><a href="contact.html">contact</a></li>
             </ul>
         </nav>
     </header>
