--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <ul>
                 <li class="link"><a href="history.html">history</a></li>
                 <li class="link"><a href="products.html">products</a></li>
+                <li class="link"><a href="contact.html">contact</a></li>
             </ul>
         </nav>
     </header>
