--- a/history.html
+++ b/history.html
@@ -26,6 +26,8 @@
        
         <div>
             <a><img src="images/coco.jpg" alt="jewelry" height="200"></a>
+        </div>
+        <div>
             <a><img src="images/drawings.jpg" alt="dress" height="300"></a>
         </div>
         <div class="caption">
