--- a/thankyou.html
+++ b/thankyou.html
@@ -21,5 +21,8 @@
     <main>
         <p class="thanks">
         Thank you for contacting us! 
+        <br>
+        <br>
+        We will get back to you soon.
         </p>    
     </main>
